# lib_rock_mechanism

./: .caveIn.cpp.swp  .clangd  .gdbinit  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  README.md.bak  README.md.bak.bak  README.md.bak.bak.bak  README.md.bak.bak.bak.bak  README.md.bak.bak.bak.bak.bak.bak  README.md.bak.bak.bak.bak.bak.bak.bak  actor.cpp  actor.cpp.bak  actor.cpp.bak.bak  actor.cpp.bak.bak.bak  actor.h  actor.h.bak  actor.h.bak.bak  actor.h.bak.bak.bak  ai  area.cpp  area.cpp.bak  area.cpp.bak.bak  area.cpp.bak.bak.bak  area.cpp.bak.bak.bak.bak  area.h  area.h.bak  area.h.bak.bak  area.h.bak.bak.bak  block.cpp  block.cpp.bak  block.cpp.bak.bak.bak  block.cpp.bak.bak.bak.bak  block.cpp.bak.bak.bak.bak.bak  block.h  block.h.bak  block.h.bak.bak  (+100 more)
engine/: CMakeLists.txt  actor.cpp  actor.h  actorOrItemIndex.cpp  actorOrItemIndex.h  actorQuery.cpp  actorQuery.h  adjacentBlockGenerator.h  animalSpecies.cpp  animalSpecies.h  area.cpp  area.h  areaBuilderUtil.h  assertReferenceCount.h  atomicBool.h  attackTable.cpp  attackTable.h  attackTargetAction.h  attackType.cpp  attackType.h  attributes.cpp  attributes.h  block.cpp  block.h  blockFeature.cpp  blockFeature.h  blockIndices.cpp  blockIndices.h  bloomHashMap.h  body.cpp  body.h  bodyType.cpp  bodyType.h  boundedInt.h  buckets.h  callbackTypes.h  caveIn.cpp  combatScore.h  concepts.h  config.cpp  (+227 more)
engine/actor/: actorQuery.cpp  actorQuery.h  canSee.cpp  canSee.h  grow.cpp  grow.h  stamina.cpp  stamina.h
engine/actors/: actorQuery.cpp  actorQuery.h  actors.cpp  actors.h  attributes.cpp  body.cpp  canPickUp.cpp  canReserve.cpp  combat.cpp  drama.cpp  drink.cpp  eat.cpp  equipment.cpp  grow.cpp  grow.h  lead.cpp  location.cpp  mount.cpp  move.cpp  objectives.cpp  psycology.cpp  skill.cpp  skill.h  soldier.cpp  soldier.h  stamina.cpp  temperature.cpp  uniform.cpp  uniform.h  vision.cpp
engine/allocators/: watermarkingStack.cpp  watermarkingStack.h  watermarkingStack.hpp
engine/area/: area.cpp  area.h  caveIn.cpp  evaporation.cpp  evaporation.h  exteriorPortals.cpp  exteriorPortals.h  hasActors.cpp  hasActors.h  hasBlockDesignations.cpp  hasBlockDesignations.h  hasCombinedOccupied.cpp  hasCombinedOccupied.h  hasConstructionDesignations.cpp  hasConstructionDesignations.h  hasDigDesignations.cpp  hasDigDesignations.h  hasFluidGroups.cpp  hasFluidGroups.h  hasItems.cpp  hasItems.h  hasOnSightForFaction.cpp  hasOnSightForFaction.h  hasSleepingSpots.cpp  hasSleepingSpots.h  hasSoldiers.cpp  hasSoldiers.h  hasSpaceDesignations.cpp  hasSpaceDesignations.h  hasTargetedHauling.cpp  hasTargetedHauling.h  installItem.cpp  installItem.h  rain.cpp  rain.h  stockpile.cpp  stockpile.h  woodcutting.cpp  woodcutting.h
engine/block/: hasActors.cpp  hasActors.h  hasFluids.cpp  hasFluids.h  hasItems.cpp  hasItems.h  hasPlant.cpp  hasPlant.h  hasShapes.cpp  hasShapes.h
engine/blocks/: actors.cpp  adjacentOffsets.h  blockIndexArray.h  blockIndexSetSIMD.cpp  blockIndexSetSIMD.h  blocks.cpp  blocks.h  designations.cpp  exposedToSky.cpp  exposedToSky.h  farm.cpp  features.cpp  fire.cpp  floating.cpp  fluid.cpp  item.cpp  nthAdjacentOffsets.cpp  nthAdjacentOffsets.h  plant.cpp  projects.cpp  reservation.cpp  shapes.cpp  shapes.hpp  solid.cpp  spatialSort.cpp  stockpile.cpp  temperature.cpp
engine/config/: config.cpp  config.h  drama.cpp  drama.h  physics.cpp  physics.h  psycology.cpp  psycology.h  social.cpp  social.h
engine/dataStructures/: aabb.cpp  aabb.h  bitset.cpp  bitset.h  bitset.hpp  buckets.h  hybridSequence.h  implicitOctTree.h  limitedSet.cpp  limitedSet.h  limitedSet.hpp  locationBuckets.cpp  locationBuckets.h  octTree.cpp  octTree.h  octTree2.h  octTree2.hpp  rtree.cpp  rtree.h  rtreeBoolean.cpp  rtreeBoolean.h  rtreeBoolean.hpp  rtreeBooleanLowZOnly.cpp  rtreeBooleanLowZOnly.h  rtreeData.cpp  rtreeData.h  rtreeData.hpp  rtreeDataIndex.cpp  rtreeDataIndex.h  rtreeDataIndex.hpp  rtreeOpenList.cpp  rtreeOpenList.h  shardedBitSet.h  smallMap.cpp  smallMap.h  smallMap.hpp  smallSet.cpp  smallSet.h  smallSet.hpp  sortedVectorContainers.h  (+6 more)
engine/definitions/: animalSpecies.cpp  animalSpecies.h  attackType.cpp  attackType.h  bodyType.cpp  bodyType.h  definitions.cpp  definitions.h  itemType.cpp  itemType.h  materialType.cpp  materialType.h  moveType.cpp  moveType.h  plantSpecies.cpp  plantSpecies.h  shape.cpp  shape.h  skillType.cpp  skillType.h  weaponType.h  woundType.cpp  woundType.h
engine/drama/: castForRole.h  engine.cpp  engine.h
engine/engine/: lineGenerator.cpp  octTree.cpp
python/: CMakeLists.txt  bind.cpp  launch.py
src/: CMakeLists.txt  actor.cpp  actor.h  actor.hpp  animal.h  animalSpecies.h  area.cpp  area.h  area.hpp  areaBuilderUtil.h  assemblage.h  attack.h  attackTargetAction.h  attackType.h  attributes.cpp  attributes.h  block.cpp  block.h  block.hpp  blockFeature.cpp  blockFeature.h  blockFeatureType.h  body.cpp  body.h  buckets.h  canGrow.h  caveIn.cpp  caveIn.hpp  combatScore.h  config.h  construct.cpp  construct.h  craft.cpp  craft.h  cuboid.cpp  cuboid.h  cuboid.hpp  datetime.h  definitions  definitions.h  (+162 more)
ui/: CMakeLists.txt  actorPanel.cpp  actorPanel.h  backgroundTask.cpp  backgroundTask.h  contextMenu.cpp  contextMenu.h  detailPanel.cpp  detailPanel.h  dialogueBox.cpp  dialogueBox.h  displayData.cpp  displayData.h  draw.cpp  draw.h  editActorPanel.cpp  editActorPanel.h  editAreaPanel.cpp  editAreaPanel.h  editDramaPanel.cpp  editDramaPanel.h  editFactionPanel.cpp  editFactionPanel.h  editRealityPanel.cpp  editRealityPanel.h  editStockPilePanel.cpp  editStockPilePanel.h  gameOverlay.cpp  gameOverlay.h  infoPopup.cpp  infoPopup.h  interpolate.cpp  interpolate.h  load.cpp  load.h  main.cpp  mainMenu.cpp  mainMenu.h  mapDetailPanel.h  mapOverlay.h  (+21 more)
ui2/: CMakeLists.txt  atomicBool.h  backgroundTask.cpp  backgroundTask.h  displayData.cpp  displayData.h  draw.cpp  draw.h  gameOverlay.cpp  gameOverlay.h  imguiHelpers.cpp  imguiHelpers.h  imguiStdString.h  infoPopUp.cpp  infoPopUp.h  main.cpp  renderBuffer.cpp  renderBuffer.h  sprite.cpp  sprite.h  window.cpp  window.h
(+643 files in other folders)
