file(GLOB ENIGNE_FILES *.cpp)
file(GLOB ACTOR_FILES actors/*.cpp)
file(GLOB AREA_FILES area/*.cpp)
file(GLOB BLOCKS_FILES blocks/*.cpp)
file(GLOB DRAMA_FILES drama/*.cpp drama/arcs/*.cpp)
file(GLOB FLUIDGROUP_FILES fluidGroups/*.cpp)
file(GLOB ITEM_FILES items/*.cpp)
file(GLOB OBJECTIVE_FILES objectives/*.cpp)
file(GLOB SIMULATION_FILES simulation/*.cpp)
add_library (Engine ${ENIGNE_FILES} ${ACTOR_FILES} ${AREA_FILES} ${BLOCKS_FILES} ${DRAMA_FILES} ${FLUIDGROUP_FILES} ${ITEM_FILES} ${OBJECTIVE_FILES} ${SIMULATION_FILES})
target_compile_features(Engine PUBLIC cxx_std_20)
target_include_directories (Engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
find_package(OpenMP)
if(OpenMP_CXX_FOUND)
target_link_libraries(Engine PUBLIC OpenMP::OpenMP_CXX)
endif()
set(CMAKE_CXX_CPPCHECK "cppcheck")
