file(GLOB ENIGNE_FILES CONFIGURE_DEPENDS *.cpp)
file(GLOB ACTOR_FILES CONFIGURE_DEPENDS actors/*.cpp)
file(GLOB AREA_FILES CONFIGURE_DEPENDS area/*.cpp)
file(GLOB BLOCKS_FILES CONFIGURE_DEPENDS blocks/*.cpp)
file(GLOB DRAMA_FILES CONFIGURE_DEPENDS drama/*.cpp drama/arcs/*.cpp)
file(GLOB FLUIDGROUP_FILES CONFIGURE_DEPENDS fluidGroups/*.cpp)
file(GLOB ITEM_FILES CONFIGURE_DEPENDS items/*.cpp)
file(GLOB OBJECTIVE_FILES CONFIGURE_DEPENDS objectives/*.cpp)
file(GLOB SIMULATION_FILES CONFIGURE_DEPENDS simulation/*.cpp)
add_library (Engine ${ENIGNE_FILES} ${ACTOR_FILES} ${AREA_FILES} ${BLOCKS_FILES} ${DRAMA_FILES} ${FLUIDGROUP_FILES} ${ITEM_FILES} ${OBJECTIVE_FILES} ${SIMULATION_FILES})
target_compile_features(Engine PUBLIC cxx_std_20)
target_include_directories (Engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
find_package(OpenMP)
if(OpenMP_CXX_FOUND)
target_link_libraries(Engine PUBLIC OpenMP::OpenMP_CXX)
endif()
set(CMAKE_CXX_CPPCHECK "cppcheck")
