file(GLOB ENIGNE_FILES CONFIGURE_DEPENDS *.cpp)
file(GLOB ACTOR_FILES CONFIGURE_DEPENDS actors/*.cpp)
file(GLOB AREA_FILES CONFIGURE_DEPENDS area/*.cpp)
file(GLOB BLOCKS_FILES CONFIGURE_DEPENDS blocks/*.cpp)
file(GLOB DRAMA_FILES CONFIGURE_DEPENDS drama/*.cpp drama/arcs/*.cpp)
file(GLOB FLUIDGROUP_FILES CONFIGURE_DEPENDS fluidGroups/*.cpp)
file(GLOB ITEM_FILES CONFIGURE_DEPENDS items/*.cpp)
file(GLOB OBJECTIVE_FILES CONFIGURE_DEPENDS objectives/*.cpp)
file(GLOB SIMULATION_FILES CONFIGURE_DEPENDS simulation/*.cpp)
file(GLOB GEOMETRY_FILES CONFIGURE_DEPENDS geometry/*.cpp)
file(GLOB PATH_FILES CONFIGURE_DEPENDS path/*.cpp)
file(GLOB VISION_FILES CONFIGURE_DEPENDS vision/*.cpp)
file(GLOB PROJECT_FILES CONFIGURE_DEPENDS projects/*.cpp)
file(GLOB DEFINITION_FILES CONFIGURE_DEPENDS definitions/*.cpp)
file(GLOB DATA_STRUCTURE_FILES CONFIGURE_DEPENDS dataStructures/*.cpp)
add_library (Engine ${DATA_STRUCTURE_FILES} ${DEFINITION_FILES} ${ENIGNE_FILES} ${ACTOR_FILES} ${AREA_FILES} ${BLOCKS_FILES} ${DRAMA_FILES} ${FLUIDGROUP_FILES} ${ITEM_FILES} ${OBJECTIVE_FILES} ${SIMULATION_FILES} ${GEOMETRY_FILES} ${PATH_FILES} ${VISION_FILES} ${PROJECT_FILES})
target_compile_features(Engine PUBLIC cxx_std_23)
target_include_directories (Engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
find_package(OpenMP)
if(OpenMP_CXX_FOUND)
	target_link_libraries(Engine PUBLIC OpenMP::OpenMP_CXX)
endif()
set(CMAKE_CXX_CPPCHECK "cppcheck")
