add_library (Source actor.cpp area.cpp attributes.cpp block.cpp blockFeature.cpp body.cpp caveIn.cpp construct.cpp craft.cpp cuboid.cpp dig.cpp drainQueue.cpp drink.cpp eat.cpp equipment.cpp eventSchedule.cpp farmFields.cpp fight.cpp fillQueue.cpp fire.cpp fluidGroup.cpp fluidQueue.cpp givePlantsFluid.cpp goTo.cpp grow.cpp harvest.cpp hasShape.cpp haul.cpp item.cpp kill.cpp leadAndFollow.cpp locationBuckets.cpp materialType.cpp mistDisperseEvent.cpp move.cpp nthAdjacentOffsets.cpp objective.cpp onDestroy.cpp findsPath.cpp plant.cpp project.cpp rain.cpp reservable.cpp simulation.cpp sleep.cpp sowSeeds.cpp stamina.cpp station.cpp stockpile.cpp targetedHaul.cpp temperature.cpp threadedTask.cpp visionCuboid.cpp visionRequest.cpp wait.cpp wander.cpp woundType.cpp)
target_compile_features(Source PUBLIC cxx_std_20)
target_include_directories (Source PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
